--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Jie Chen"
 title_separator          : "-"
 name                     : &name "Jie Chen"
 description              : &description "personal description"
-url                      : https://https://jcj7292.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://https://jcj7292.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jcj7292/jcj7292.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
