--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Jie Chen"
   avatar           : "Copy of IMG_2948 (5).jpg"
-  bio              : "Postdoctoral Fellow at Northwestern University"
-  location         : "Evanston, IL"
+  bio              : "Assistant Professor at Virginia Tech"
+  location         : "Blacksburg, VA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=PyIE5ssAAAAJ&hl=en"
